--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: This is an Islander's game page !
+description: This is a site about a game created by Fanfe called Islander
